  (Jeremy Yallop, report by Gabriel Scherer)

### Standard library:

### Other libraries:

* GPR#1406: Unix.isatty now returns true in the native Windows ports when
  passed a file descriptor connected to a Cygwin PTY. In particular, compiler
  colors for the native Windows ports now work under Cygwin/MSYS2.
  (Nicolas Ojeda Bar, review by Gabriel Scherer, David Allsopp, Xavier Leroy)

### Compiler user-interface and warnings:

- GPR#1166: In OCAMLPARAM, an alternative separator can be specified as
  first character (instead of comma) in the set ":|; ,"
  (Fabrice Le Fessant)

- GPR#1428: give a non dummy location for warning 49 (no cmi found)
  (Valentin Gatien-Baron)

- GPR#1472: Improve error reporting for missing 'rec' in let-bindings
  (Arthur Charguéraud and Armaël Guéneau, with help from Gabriel Scherer and
  Frédéric Bour)

- GPR#1496: Refactor the code printing explanation for unification type errors,
  in order to avoid duplicating pattern matches
  (Armaël Guéneau, review by Florian Angeletti and Gabriel Scherer)

- GPR#1505: Add specific error messages for unification errors involving
  functions of type "unit -> _"
  (Arthur Charguéraud and Armaël Guéneau, with help from Leo White, review by
  Florian Angeletti and Gabriel Radanne)

### Code generation and optimizations:

### Runtime system:

- GPR#1431: remove ocamlrun dependencies on curses/terminfo/termcap C library
  (Xavier Leroy, review by Daniel Bünzli)

### Tools:

- MPR#7643, GPR#1377: ocamldep, fix an exponential blowup in presence of nested
  structures and signatures (e.g. "include struct … include(struct … end) … end")
  (Florian Angeletti, review by Gabriel Scherer, report by Christophe Raffalli)

### Manual and documentation:

- PR#7647, GPR#1384: emphasize ocaml.org website and forum in README
  (Yawar Amin, review by Gabriel Scherer)

### Compiler distribution build system

- MPR#7679: make sure .a files are erased before calling ar rc, otherwise